apps/mage-ai-no-helm/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mageai-ingress
  namespace: develop
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: mage.dev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mageai
                port:
                  number: 6789
  tls: []  # Leave this empty if you're not using TLS. To enable TLS, specify hosts and the secretName.
